--- a/terraform/modules/app/files/puma.service.tmpl
+++ b/terraform/modules/app/files/puma.service.tmpl
@@ -6,6 +6,7 @@ After=network.target
 Type=simple
 User=ubuntu
 WorkingDirectory=/home/ubuntu/reddit
+Environment="DATABASE_URL=${database_url}"
 ExecStart=/bin/bash -lc 'puma'
 Restart=always
 
